# enchanter

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: event-schema.json  event-schema.md  index.html  script.js  style.css
docs/v0.3/: djinn-d2-hmm.md  gorgon-tarjan-python-ast.md  lich-m5-sandbox.md  tls-pinning.md  trust-pinning.md
inspector/: CHANGELOG.md  Cargo.toml  README.md  justfile
inspector/examples/: demo_emit.rs
inspector/scripts/: launch-demo.cmd  launch-live.cmd
inspector/src/: app.rs  demo.rs  event.rs  lib.rs  main.rs  schema.rs  state.rs  transport.rs
inspector/src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
inspector/src/views/: codebase.rs  cost.rs  drift.rs  events.rs  mod.rs  overview.rs  plugins.rs  replay.rs  runtime.rs  security.rs  tasks.rs
inspector/tests/: fixture_replay.rs  schema.rs  transport_tail.rs
inspector/tests/fixtures/: demo-events.jsonl
scripts/: copy-assets.mjs  demo-live.ts  inspect.ts  live.ts  plugin-coverage.ts  run.ts  watch.ts
scripts/hooks/: install-hooks.mjs
src/: index.ts
src/bus/: pubsub.ts
src/client/: mcp-client.ts
src/oauth/: nonce.ts  replay-store.ts  resource-indicators.ts
src/observability/: bridge.ts  bus-client.ts  cli-renderer.ts  dashboard-server.ts  notifier.ts  schema.ts
src/orchestration/: lifecycle.ts
src/plugins/: djinn.adapter.ts  gorgon.adapter.ts  hydra.adapter.ts  lich.adapter.ts  pech.adapter.ts  sylph.adapter.ts
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+42 files in other folders)
