[package]
name = "enchanter-inspector"
version = "0.5.0"
edition = "2021"
default-run = "enchanter"
description = "Terminal-first TUI cockpit for the Enchanter AI runtime"
license = "Apache-2.0"

[[bin]]
name = "enchanter"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "fs", "signal", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
